--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     
     steps:
       -name: checkout code
-      uses: actions/checkout@3
+       uses: actions/checkout@v3
 
       -name: Install Dependencies
        run: npm install
