--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,17 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: checkout code
-       uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Install Dependencies
-       run: npm install
+        run: npm install
 
-      - name: run Application
-       run: node index.js
+      - name: Run Application
+        run: node index.js
